@@ -1,3 +1,11 @@
+2008-01-10  Mike Krüger <mkrueger@novell.com> 
+
+	* Parser/CodeGenerator.cs: Fixed Bug 350864 - Refactory tools - renaming.
+
+2008-01-10  Mike Krüger <mkrueger@novell.com> 
+
+	* Parser/Resolver.cs: Fixed 350861: Autocomplete displays hidden items
+
 2008-01-08  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Gui/CSharpTextEditorExtension.cs, Parser/Resolver.cs: Fixed some infinite
